# shellScripts

./: .g.conf  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-uvx.yml
docs/: REFERENCES.md  REQUIREMENTS.md  WORKFLOW.md
scripts/: s.sh
src/shell_scripts/: __init__.py  __main__.py  config.py  core.py  utils.py  version_check.py
src/shell_scripts/commands/: __init__.py  _dc_common.py  ai_install.py  bin_links.py  claude.py  clean.py  cli_claude.py  cli_codex.py  cli_copilot.py  cli_gemini.py  cli_kiro.py  cli_opencode.py  codex.py  copilot.py  dc_differ.py  dc_editor.py  dc_viewer.py  dicom2jpg.py  dicomviewer.py  diff_cmd.py  dng2hdr2jpg.py  dng2hdr2tiff.py  dng2jpg.py  doxygen_cmd.py  edit_cmd.py  gemini.py  kiro.py  opencode.py  pdf_crop.py  pdf_merge.py  pdf_split_by_format.py  pdf_split_by_toc.py  pdf_tiler_090.py  pdf_tiler_100.py  pdf_toc_clean.py  pi.py  req_cmd.py  tests_cmd.py  ubuntu_dark_theme.py  venv_cmd.py  (+5 more)
tests/: test_tst_001_002_core.py  test_tst_003_ai_install.py  test_tst_004_bin_links_clean.py  test_tst_005_cli_launchers.py  test_tst_006_dc_common.py  test_tst_007_pdf_commands.py  test_tst_008_env_commands.py  test_tst_010_req_cmd.py  test_tst_011_dng2hdr2jpg.py  test_tst_011_dng2jpg.py  test_tst_011_video_commands.py  test_tst_012_video_commands.py
