[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.41.0", "build>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shellscripts"
version = "0.5.0"
description = "Execute useful shell scripts via an uvx-compatible CLI interface."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  { name = "Francesco Rolando" }
]
keywords = ["shell", "scripts", "uv", "astral", "uvx", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Configuration Management",
]

dependencies = [
  "rawpy; platform_system == 'Linux'",
  "imageio; platform_system == 'Linux'",
  "pillow; platform_system == 'Linux'",
  "opencv-python; platform_system == 'Linux'",
  "numpy; platform_system == 'Linux'",
]

[dependency-groups]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/Ogekuri/shellScripts"
Repository = "https://github.com/Ogekuri/shellScripts"

[project.scripts]
shellscripts = "shell_scripts.core:main"
s = "shell_scripts.core:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["shell_scripts", "shell_scripts.*"]

[tool.setuptools.package-data]
shell_scripts = ["*.py"]
